# modda

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  linux-build.yml  release-lin.yml  release-mac.yml  release-win.yml  release.yml
modda-cli/: Cargo.toml
modda-cli/resources/test/: manifest_with_component_comments.yml  manifest_with_locations.yml  manifest_with_real_ext_locations.yml
modda-cli/resources/test/dummy_game/: chitin.key
modda-cli/src/: archive_extractor.rs  archive_layout.rs  args.rs  list_components.rs  log_settings.rs  main.rs  replace.rs  timeline.rs
modda-cli/src/module/: gen_mod.rs  refresh.rs
modda-cli/src/module/location/: mod.rs
modda-cli/src/sub/: append_mod.rs  list_components.rs
modda-cli/src/subcommands/: config_edit.rs  config_show.rs  config_template.yml  discover.rs  introspect.rs  list_components.rs  mod.rs  reset.rs  search.rs
modda-cli/src/utils/: mod.rs  pathext.rs
modda-gui/: Cargo.toml  Dioxus.toml
modda-gui/src/: game_dir_selection.rs  main.rs  manifest_choice.rs  model.rs  style.css
modda-lib/: Cargo.toml
modda-lib/resources/test/: manifest_with_global_conditions.yml
modda-lib/resources/test/disable/: example
modda-lib/resources/test/disable/subdir/: example2
modda-lib/resources/test/file_lookup/MiXed/: WeiDu.conf
modda-lib/resources/test/file_lookup/conflicts/: MOD2  mod1  mod2
modda-lib/resources/test/patch/: modulename.tp2
modda-lib/resources/test/registries/: external-locations.yml
modda-lib/resources/test/replace/: expected_no_regex.txt  expected_regex.txt  expected_regex_capture.txt  input.txt
modda-lib/src/: apply_patch.rs  archive_extractor.rs  args.rs  cache.rs  canon_path.rs  chitin.rs  config.rs  download.rs  file_installer.rs  get_module.rs  global.rs  lib.rs  list_components.rs  log_parser.rs  modda_context.rs  patch_source.rs  post_install.rs  process_weidu_mod.rs  progname.rs  replace.rs  run_result.rs  run_weidu.rs  settings.rs  tp2.rs  tp2_template.rs  unique_component.rs  weidu_conf.rs
modda-lib/src/module/: disable_condition.rs  gen_mod.rs  global_locations.rs  install_comment.rs  language.rs  manifest.rs  manifest_conditions.rs  mod.rs  module.rs  weidu_mod.rs
modda-lib/src/module/location/: github.rs  http.rs  location.rs  mod.rs  replace.rs  size_hint.rs  source.rs  strict_replace.rs
modda-lib/src/obtain/: get_module.rs  get_options.rs  mod.rs
modda-lib/src/sub/: append_mod.rs  discover.rs  extract_manifest.rs  install.rs  invalidate.rs  list_components.rs  mod.rs  reset.rs
modda-lib/src/utils/: insensitive.rs  mod.rs  pathext.rs  read_all.rs
patch-rs/src/: parser.rs
patch-rs/tests/: parse_samples.rs
resources/test/: manifest.yml  manifest_with_empty_locations.yml  manifest_with_locations.yml  manifest_with_modules.yml
resources/test/patch/: modulename.tp2  modulename_add.tp2  modulename_delete.tp2  modulename_patched.tp2
resources/test/read_inline_patch/: inline_patch.diff  module_with_inline_patch.yaml
src/: apply_patch.rs  archive_extractor.rs  archive_layout.rs  args.rs  bufread_raw.rs  cache.rs  canon_path.rs  components.rs  credentials.rs  download.rs  file_installer.rs  file_module_install.rs  fs_ops.rs  get_module.rs  global.rs  language.rs  list_components.rs  location.rs  log_parser.rs  lowercase.rs  main.rs  manifest.rs  module.rs  named_unit_variant.rs  patch_source.rs  pathext.rs  post_install.rs  process_weidu_mod.rs  progname.rs  replace.rs  run_weidu.rs  settings.rs  timeline.rs  tp2.rs  tp2_template.rs  unique_component.rs  weidu.rs  weidu_conf.rs  weidu_context.rs
src/module/: automation.rs  components.rs  file_mod.rs  file_module_origin.rs  gen_mod.rs  global_locations.rs  install_comment.rs  location.rs  manifest.rs  mod.rs  module.rs  module_conf.rs  pre_copy_command.rs  refresh.rs  weidu_mod.rs
src/module/location/: github.rs  http.rs  mod.rs  source.rs
src/sub/: append_mod.rs  extract_manifest.rs  install.rs  invalidate.rs  list_components.rs  mod.rs  reset.rs  search.rs  uninstall.rs
src/tp2/: mod.rs  tp2.lalrpop
src/utils/: mod.rs
