[package]
name = "modda"
version = "1.0.0"
authors = ["Mickaël <mleduque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bytes = "1"
clap = { git = "https://github.com/clap-rs/clap/", rev="65b3892" }
directories = "4.0.1"
chardetng = "0.1.17"
chrono = "0.4.23"
encoding_rs = "0.8"
env_logger = "0.10.0"
flate2 = "1"
fs_extra = "1.3.0"
futures-util = "0.3.15"
globwalk = "0.8.1"
handlebars = "4.3.6"
indoc ="2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.14"
patch = "0.7.0"
path-clean = "1.0.1"
path-absolutize = "3.0.10"
percent-encoding = "2.1.0"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.9"
serde_with = "2.2.0"
serde_yaml = "0.9.14"
shellexpand = "3.0.0"
tar = "0.4"
tokio = { version = "1.8", features = ["full"] }
tempfile = "3.2.0"
unrar = "0.4.4"
url = "2.2.2"
zip = "0.6.3"

[dev-dependencies]
faux = "0.1.9"
