[package]
name = "modda"
version = "1.4.0"
authors = ["Mickaël <mleduque@gmail.com>"]
description = "Weidu install automation"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.69"
bytes = "1.4.0"
clap = "4.1.8"
clap_derive = "4.1.8"
directories = "5.0.1"
chardetng = "0.1.17"
chrono = "0.4.24"
dialoguer = "0.10.4"
encoding_rs = "0.8"
env_logger = "0.10.0"
flate2 = "1.0.25"
fs_extra = "1.3.0"
futures-util = "0.3.27"
globwalk = "0.8.1"
handlebars = "4.3.6"
humantime = "2.1.0"
indicatif = "0.17.3"
indoc ="2.0.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
patch = "0.7.0"
path-clean = "1.0.1"
path-absolutize = "3.0.14"
percent-encoding = "2.2.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["stream"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_path_to_error = "0.1.10"
serde_with = "2.3.1"
serde_yaml = "0.9.19"
shellexpand = "3.0.0"
tar = "0.4.38"
tokio = { version = "1.26.0", features = ["full"] }
tempfile = "3.4.0"
url = "2.3.1"
zip = "0.6.4"

[dev-dependencies]
faux = "0.1.9"
