[package]
name = "modda"
version = "1.6.0-pre1"
authors = ["Mickaël <mleduque@gmail.com>"]
description = "Weidu install automation"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.72"
bytes = "1.4.0"
clap = "4.3.21"
clap_derive = "4.3.12"
directories = "5.0.1"
chardetng = "0.1.17"
chrono = "0.4.26"
dialoguer = "0.10.4"
encoding_rs = "0.8.32"
env_logger = "0.10.0"
filetime = "0.2.22"
flate2 = "1.0.26"
fs_extra = "1.3.0"
futures-util = "0.3.28"
globwalk = "0.8.1"
handlebars = "4.3.7"
humantime = "2.1.0"
indicatif = "0.17.6"
indoc ="2.0.3"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.19"
patch = "0.7.0"
path-clean = "1.0.1"
path-absolutize = "3.1.0"
percent-encoding = "2.3.0"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_path_to_error = "0.1.14"
serde_with = "3.2.0"
serde_yaml = "0.9.25"
shellexpand = "3.1.0"
tar = "0.4.40"
tokio = { version = "1.30.0", features = ["full"] }
tempfile = "3.7.1"
url = "2.4.0"
zip = "0.6.6"
void = "1.0.2"

[dev-dependencies]
faux = "0.1.9"
function_name = "0.3.0"
