[package]
name = "modda"
version = "1.7.2"
authors = ["Mickaël <mleduque@gmail.com>"]
description = "Weidu install automation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.79"
clap = "4.4.12"
env_logger = "0.11.1"
log = "0.4.20"
modda-lib = { path = "../modda-lib" }
