[package]
name = "modda"
version = "1.11.0"
authors = ["Mickaël <mleduque@gmail.com>"]
description = "Weidu install automation"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = "~4.6.0" # https://github.com/rust-build/rust-build.action/issues/88
dialoguer = "0.12.0"
env_logger = "0.11.9"
handlebars = "6.4.0"
itertools = "0.14.0"
log = "0.4.29"
modda-lib = { path = "../modda-lib" }
nu-ansi-term = "0.50.3"
open = "5.3.3"
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
