[package]
name = "modda-lib"
version = "1.11.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-ansi-term = "0.50.1"
anyhow = "1.0.83"
bytes = "1.10.1"
clap = "~4.4.18" # locked because 4.5+ has msrv 1.74 with rust-build-action failing on https://github.com/rust-build/rust-build.action/issues/88
clap_derive = "4.5.32"
directories = "6.0.0"
chardetng = "0.1.17"
chrono = "0.4.38"
dialoguer = "0.11.0"
encoding_rs = "0.8.34"
filetime = "0.2.23"
flate2 = "1.0.30"
fs_extra = "1.3.0"
futures-util = "0.3.30"
getrandom = { version = "=0.2.10" } # until build action support macos sdk >= 10.12
globwalk = "0.9.1"
handlebars = "6.3.2"
humantime = "2.1.0"
indicatif = "0.18.0"
indoc ="2.0.5"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.21"
patch = { path = "../patch-rs" }
path-clean = "1.0.1"
path-absolutize = "3.1.1"
percent-encoding = "2.3.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["stream", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
serde_with = "3.8.1"
serde_yaml = "0.9.34-deprecated"
shellexpand = "3.1.0"
tar = "0.4.40"
tokio = { version = "1.44.2", features = ["full"] }
tempfile = "3.10.1"
url = "2.5.0"
zip = "4.3.0"
void = "1.0.2"

[dev-dependencies]
faux = "0.1.10"
function_name = "0.3.0"
env_logger = "0.11.3"
temp-env = "0.3.6"
