[package]
name = "modda-lib"
version = "1.11.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bytesize = { version = "2.3.1", features = ["serde"] }
bytes = "1.11.1"
clap = "~4.5.60"
clap_derive = "4.5.55"
directories = "6.0.0"
chardetng = "0.1.17"
chrono = "0.4.38"
dialoguer = "0.12.0"
encoding_rs = "0.8.35"
filetime = "0.2.27"
flate2 = "1.1.9"
fs_extra = "1.3.0"
futures-util = "0.3.32"
getrandom = "0.4.1"
globset = "0.4.18"
globwalk = "0.9.1"
handlebars = "6.4.0"
humantime = "2.3.0"
ignore = "0.4.25"
indicatif = "0.18.4"
indoc ="2.0.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
nu-ansi-term = "0.50.3"
patch = { path = "../patch-rs" }
path-clean = "1.0.1"
path-absolutize = "3.1.1"
percent-encoding = "2.3.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_with = "3.17.0"
serde_yaml = "0.9.34-deprecated"
shellexpand = "3.1.2"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
tempfile = "3.26.0"
url = "2.5.8"
void = "1.0.2"
walkdir = "2.5.0"
zip = "8.1.0"


[dev-dependencies]
faux = "0.1.13"
function_name = "0.3.0"
env_logger = "0.11.9"
temp-env = "0.3.6"
